Adiciona os exemplos do capítulo dois

--- a/SolucaoCapitulo01/Capitulo01/appsettings.json
+++ b/SolucaoCapitulo01/Capitulo01/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IESConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IESDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
