Adiciona os exemplos do capítulo sete

--- a/IES/IES/IES.csproj
+++ b/IES/IES/IES.csproj
@@ -22,7 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Areas\Cadastros\Data\" />
+    <Folder Include="Areas\Cadastros\Models\" />
+    <Folder Include="Areas\Discente\Data\" />
+    <Folder Include="Areas\Discente\Models\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
