--- a/IES/IES/IES.csproj
+++ b/IES/IES/IES.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.14" />
@@ -26,6 +27,7 @@
     <Folder Include="Areas\Cadastros\Models\" />
     <Folder Include="Areas\Discente\Data\" />
     <Folder Include="Areas\Discente\Models\" />
+    <Folder Include="Areas\Docente\Models\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
